tests/ui/const-generics/generic_const_parameter_types/check-type-in-mir.stderr
error: lifetime may not live long enough
  --> $DIR/check-type-in-mir.rs:6:12
   |
LL | fn foo<'a, const N: &'a u32>() {
   |        -- lifetime `'a` defined here
LL |     let b: &'static u32 = N;
   |            ^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

